# cb

./: .gitignore  LICENSE  README.md  asd.py  cn.ipynb  gradio_demo.py  pyproject.toml  requirements.txt
data/: properties_seed.csv
knowledge-base/AI/: Tax&FeesAI.md  VisaAI.md  completionAI.md  forgeinexchange.md  mortgageAI.md
knowledge-base/Visa/: GoldenVisa.md  Temporary residecen Visa.md
property_reco/: __init__.py  catalog.py  constraints.py  scoring.py  seed.py  types.py
tests/: MANUAL_DEMO_CHECKLIST.md  conftest.py  test_catalog_scoring.py  test_constraints.py  test_failure_modes.py  test_gradio_render.py  test_no_match_flow.py  test_seed_integration.py
