[project]
name = "cb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.79.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.0",
    "datasets==3.6.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "gradio>=6.5.1",
    "huggingface-hub>=0.33.4,<1.0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter-dash>=0.4.2",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.12",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "matplotlib>=3.10.8",
    "modal>=1.3.3",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "openai>=2.20.0",
    "openai-agents>=0.9.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "protobuf==3.20.2",
    "pytest>=8.4.1",
    "psutil>=7.2.2",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "sentence-transformers>=5.2.2",
    "setuptools>=82.0.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.41,<5",
    "wandb>=0.25.0",
]
